force-app/main/default/objects/Vote__c/fields/Affirmative__c.field-meta.xml
<CustomField>
    <fullName>Affirmative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affirmative</label>
    <type>Checkbox</type>
</CustomField>