force-app/main/default/objects/Vote__c/fields/Ballot_Id__c.field-meta.xml
<CustomField>
    <fullName>Ballot_Id__c</fullName>
    <label>Ballot Id</label>
    <referenceTo>Ballot__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>