force-app/main/default/objects/Vote__c/fields/Ballot_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Ballot_Initiative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ballot Initiative</label>
    <referenceTo>Ballot_Initiative__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>