force-app/main/default/objects/Vote__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate_Profile__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>