force-app/main/default/objects/Vote__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>